--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
              "></div>"+
            "</div>"+
          "</div>"
-         if(index===0 ||index==skills.length/2)
+         if(index===0 ||(index==(skills.length/2)))
          {
           $('#skills').append(
             "<div class='col-md-5 mr-auto'>"+
