--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata"
       rel="stylesheet"
     />
+                      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMSRQ6YLZD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZMSRQ6YLZD');
+</script>
     <style>
       iframe {
         border-width: unset !important;
