--- a/index.html
+++ b/index.html
@@ -258,16 +258,7 @@
         <div class="col-md-10">
           <h2 id="resume_header" class="section__title">Resume_</h2>
           <p class="section__description">
-            I have studied from
-            <i>
-              <b>institutes</b>
-            </i>
-            but most importantly just like every other developer i have
-            <i>
-              <b>studied</b>
-            </i>
-            so much online and have won many
-            <i> <b>development competetions</b> </i>.
+            I have received formal education from various institutions, but I have also gained extensive knowledge through online learning and have demonstrated my skills through winning several development competitions.
           </p>
         </div>
       </div>
