--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         },
         address: "Karachi, Pakistan",
         description: `I want to give you a clear view of the contribution I can make to your product development efforts as a MERN Stack Developer. My educational background is mainly in Computer Science, in which I hold a ACCP Pro (Aptech Certified Computer Professional) Dimploma. I also possess great skills in Web Design & Development, working with various programming languages, libraries databases and frameworks like Javascript, PHP, NodeJS, React JS, Next JS, Nest JS, MongoDB, Mysql. Last three years I have engaged myself in many MERN Stack based projects due to my strong background in javascript. I would also like to add that I have developed a wide range of forward-thinking end-user products, which have all improved user experience and solved problems.`,
-        resume: "Shehzad Ahmed MERN Stack Developer.pdf",
+        resume: "Shehzad Ahmed Software Engineer React.pdf",
         studiesDescription:
           "Developing web-based applications and progressive web apps, solving real life problems with the help of softwares. Passionated about developing life-changing good quality and resource saving softwares. Looking forward to work with the community and learn more and more everyday.",
         experience: [
